nicole fixed overflow

--- a/BogBlogPlus/src/App.css
+++ b/BogBlogPlus/src/App.css
@@ -179,7 +179,9 @@ margin: 0;
   gap: 1.5rem;
 }
 /* postdetail page*/
-
+.postBody{
+overflow-wrap: break-word;
+}
 .post-details {
   max-width: 800px;
   margin: 2rem auto;
